Cambio en el DBContext

--- a/SistemaARD/App.config
+++ b/SistemaARD/App.config
@@ -7,9 +7,7 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-  <connectionStrings>
-    <add name="DBEntities" connectionString="metadata=res://*/LosNacimientos.csdl|res://*/LosNacimientos.ssdl|res://*/LosNacimientos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sistemarrhh.database.windows.net;initial catalog=losnacimientos;persist security info=True;user id=renemurillo;password=Secret@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -20,4 +18,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<connectionStrings><add name="DBEntities" connectionString="metadata=res://*/LosNacimientos.csdl|res://*/LosNacimientos.ssdl|res://*/LosNacimientos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sistemarrhh.database.windows.net;initial catalog=losnacimientos;persist security info=True;user id=renemurillo;password=Secret@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
