--- a/SistemaARD/App.config
+++ b/SistemaARD/App.config
@@ -18,4 +18,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="DBEntities" connectionString="metadata=res://*/LosNacimientos.csdl|res://*/LosNacimientos.ssdl|res://*/LosNacimientos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=dbamazon.ckiye6xuq36t.us-east-2.rds.amazonaws.com;initial catalog=losnacimientos;persist security info=True;user id=rrhh;password=rda1011101;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <!-- persist security info=True;user id=rrhh;password=rda1011101-->
+<connectionStrings><add name="DBEntities" connectionString="metadata=res://*/LosNacimientos.csdl|res://*/LosNacimientos.ssdl|res://*/LosNacimientos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=losnacimientos;Integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
