--- a/SistemaARD/SistemaARD.csproj
+++ b/SistemaARD/SistemaARD.csproj
@@ -136,6 +136,12 @@
     <Compile Include="Vistas\AdministracionPlanilla.Designer.cs">
       <DependentUpon>AdministracionPlanilla.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\Aguinaldos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\Aguinaldos.Designer.cs">
+      <DependentUpon>Aguinaldos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -206,6 +212,9 @@
     </Compile>
     <EmbeddedResource Include="Vistas\AdministracionPlanilla.resx">
       <DependentUpon>AdministracionPlanilla.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\Aguinaldos.resx">
+      <DependentUpon>Aguinaldos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
