--- a/SistemaARD/App.config
+++ b/SistemaARD/App.config
@@ -19,4 +19,7 @@
     </providers>
   </entityFramework>
   <!-- persist security info=True;user id=rrhh;password=rda1011101-->
-<connectionStrings><add name="DBEntities" connectionString="metadata=res://*/LosNacimientos.csdl|res://*/LosNacimientos.ssdl|res://*/LosNacimientos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=losnacimientos;Integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings>
+  <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS; Initial catalog=losnacimientos; Integrated security=True;" providerName="System.Data.SqlClient" />
+  <add name="DBEntities" connectionString="metadata=res://*/LosNacimientos.csdl|res://*/LosNacimientos.ssdl|res://*/LosNacimientos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=losnacimientos;Integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+</connectionStrings></configuration>
