--- a/SistemaARD/SistemaARD.csproj
+++ b/SistemaARD/SistemaARD.csproj
@@ -157,6 +157,12 @@
     <Compile Include="Login\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\GenerarContratos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\GenerarContratos.Designer.cs">
+      <DependentUpon>GenerarContratos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\ListaEmpleados.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -234,6 +240,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vistas\GenerarContratos.resx">
+      <DependentUpon>GenerarContratos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vistas\ListaEmpleados.resx">
       <DependentUpon>ListaEmpleados.cs</DependentUpon>
     </EmbeddedResource>
