--- a/SistemaARD/SistemaARD.csproj
+++ b/SistemaARD/SistemaARD.csproj
@@ -174,6 +174,12 @@
     <Compile Include="Vistas\ListaEmpleados.Designer.cs">
       <DependentUpon>ListaEmpleados.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\ListaIndemnizaciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\ListaIndemnizaciones.Designer.cs">
+      <DependentUpon>ListaIndemnizaciones.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -250,6 +256,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\ListaEmpleados.resx">
       <DependentUpon>ListaEmpleados.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\ListaIndemnizaciones.resx">
+      <DependentUpon>ListaIndemnizaciones.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
